Client and Server updated. External_ip and replicas work in progress
